--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '21'
-        distribution: 'amazoncorretto'
+        distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn clean verify --file pom.xml
