--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean verify --file pom.xml
-  upload: Upload the .jar file as an artifact
+  upload:
     needs: build
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/upload-artifact@v2  
       with:
