--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+    - name: Upload Artifacts
     - uses: actions/upload-artifact@v2  
       with:
         name: app
@@ -39,6 +40,11 @@ jobs:
     needs: upload
     runs-on: ubuntu-latest
     steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: jar-files
+        path: target
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag test-app:$(date +%s)
