--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: app-jar
+        path: target/app.jar
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag app:$(date +%s)
       
