--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,19 +19,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
-      run: mvn clean verify --file pom.xml  
+      run: mvn clean verify --file pom.xml
+
+    - run: mkdir target && cp target/*.jar target
+    
     - name: Upload app.jar
       uses: actions/upload-artifact@v2  
       with:
         name: app-jar
-        path: target/app.jar  # This uploads all .jar files in the target directory
+        path: target
   buildDocker:
     needs: build
     runs-on: ubuntu-latest
@@ -41,7 +46,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: app-jar
-        path: target/app.jar
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag app:$(date +%s)
       
