--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,22 +30,22 @@ jobs:
     - name: Build with Maven
       run: mvn clean verify --file pom.xml
 
-    - run: mkdir target && cp target/*.jar target
+    #- run: mkdir target && cp target/*.jar target
     
-    - name: Upload app.jar
-      uses: actions/upload-artifact@v2  
-      with:
-        name: app-jar
-        path: target
+    #- name: Upload app.jar
+    #  uses: actions/upload-artifact@v2  
+    #  with:
+    #    name: app-jar
+    #    path: target
   buildDocker:
     needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Download Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: app-jar
+    #- name: Download Artifacts
+    #  uses: actions/download-artifact@v2
+    #  with:
+    #    name: app-jar
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag app:$(date +%s)
       
