--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,7 +17,8 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/test-app:latest
+  ACTOR: alexander-94
+  IMAGE_NAME: ${{ env.actor }}/test-app:latest
 
 jobs:
   build:
@@ -37,7 +38,7 @@ jobs:
 
     - name: Login
       run: |
-        echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ env.actor }} --password-stdin
   
     - name: Build the Docker image and Publish
       run: |
