--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,8 +17,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  ACTOR: alexander-94
-  IMAGE_NAME: ${{ env.ACTOR }}/test-app:latest
+  IMAGE_NAME: alexander-94/test-app:latest
 
 jobs:
   build:
@@ -38,7 +37,7 @@ jobs:
 
     - name: Login
       run: |
-        echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ env.ACTOR }} --password-stdin
+        echo ${{ secrets.PAT }} | docker login ghcr.io -u alexander-94 --password-stdin
   
     - name: Build the Docker image and Publish
       run: |
