--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -52,13 +52,9 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
-    - name: Login to ghcr.io
-      run: |
-        echo ${{ secrets.PAT }} | docker login ghcr.io -u alexander-94 --password-stdin
-
     - name: Connect to the server, pull the Docker image and run
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && docker compose pull && docker compose up -d && exit"
-
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "echo '${{ secrets.PAT }}' | docker login ghcr.io -u alexander-94 --password-stdin && cd '${{ secrets.WORK_DIR }}' && docker compose pull && docker compose up -d && exit"
+      
     - name: cleanup
       run: rm -rf ~/.ssh
 
